--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
         <ul class="nav-container">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/projects">Projects</a></li>
+            <li><a href="/weather">MongoDB Chart</a></li>
         </ul>
     </nav>
 </header>
